gap fix

--- a/app/about/hero/hero1.css
+++ b/app/about/hero/hero1.css
@@ -16,7 +16,7 @@
 /* ================= SUBTITLE ================= */
 .hero-about__subtitle {
   align-items: center;
-  gap: 17px;
+  gap: 20px;
   margin-bottom: 32px;
   display: flex;
   position: absolute;
@@ -112,7 +112,7 @@
 /* ================= SCROLL WORD ANIMATION ================= */
 .hero-about__text-container {
   max-width: 900px;
-  margin-top: 30px;
+  margin-top: 120px;
   text-align: center;
   width: 100%;
   padding: 0 20px;
