--- a/app/about/vision/vision.css
+++ b/app/about/vision/vision.css
@@ -11,6 +11,7 @@ body {
   max-width: 1200px;
   margin: 0 auto;
   text-align: center;
+ 
 }
 
 .vision-page-container h5 {
@@ -213,6 +214,7 @@ body {
   align-items: center;
   justify-content: center;
   margin-bottom: -12px;
+  margin-top: 100;
 }
 
 /* ================= LARGE SCREENS ================= */
